--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,33 +7,48 @@
     android:orientation="vertical"
     tools:context=".EditNoteActivity">
 
-    <com.example.roomdatabaseexample.utils.NoteEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/note_title_read"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="5dp"
-        android:padding="5dp"
-        android:hint="Title"
-        android:fontFamily="@font/architects_daughter"
-        android:textColor="#000000"
-        android:background="#FFFFD9"/>
-
-    <com.example.roomdatabaseexample.utils.NoteEditText
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/note_body_read"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="2dp"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:hint="Content"
-        android:inputType="textMultiLine"
-        android:gravity="top"
-        android:textColor="#000000"
-        android:fontFamily="@font/architects_daughter"
-        android:background="#FFFFD9"/>
+        android:orientation="vertical">
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+        <com.example.roomdatabaseexample.utils.NoteEditText
+            android:id="@+id/note_title_read"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="#FFFFD9"
+            android:fontFamily="@font/roboto_medium"
+            android:hint="Title"
+            android:padding="5dp"
+            android:textColor="#000000" />
+
+        <com.example.roomdatabaseexample.utils.NoteEditText
+            android:id="@+id/note_body_read"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="5dp"
+            android:background="#FFFFD9"
+            android:fontFamily="@font/roboto"
+            android:gravity="top"
+            android:hint="Content"
+            android:inputType="textMultiLine"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:textColor="#000000" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_note_navigation"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/nav_bar_menu"
+        android:layout_gravity="bottom"/>
+
+</FrameLayout>
