--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".NewNote">
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <com.example.roomdatabaseexample.utils.NoteEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,6 +34,14 @@
         android:textColor="#000000"
         android:fontFamily="@font/architects_daughter"
         android:background="#FFFFD9"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/note_navigation"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/nav_bar_menu"
+        android:layout_gravity="bottom"/>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</FrameLayout>
