--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -15,6 +15,13 @@
         android:layout_height="60dp"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:id="@+id/note_indicator"
+            android:background="#333"
+            android:layout_weight="0.1"/>
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="0dp"
             android:layout_height="match_parent"
